--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </svg>
                 <span>SLM Bot</span>
             </a>
-            <a href="PASTE_URL_HERE_4" class="option-btn" data-tooltip="PHI-2 + RAG (Hybrid, Lightweight, Fast)" target="_blank"
+            <a href="https://huggingface.co/spaces/2001Samir/ewu-chatbot-slm" class="option-btn" data-tooltip="PHI-2 + RAG (Hybrid, Lightweight, Fast)" target="_blank"
                 rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M4 14h12v6H4zM4 8h12v6H4zM4 2h12v6H4z" />
@@ -122,5 +122,6 @@
     <script src="script.js"></script>
 
 </body>
+
 
 </html>
