--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
                 </svg>
                 <span>Rasa Bot</span>
             </a>
-            <a href="PASTE_URL_HERE_2" class="option-btn" data-tooltip="Retrieval-Augmented Chatbot" target="_blank"
-                rel="noopener noreferrer">
+            <button class="option-btn modal-trigger" data-option="RAG Bot"
+                data-tooltip="Retrieval-Augmented Chatbot" tabindex="0">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path
                         d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20v2H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2H20v15H6.5A2.5 2.5 0 0 1 4 4.5v15z" />
                 </svg>
                 <span>RAG Bot</span>
-            </a>
-            <a href="PASTE_URL_HERE_3" class="option-btn" data-tooltip="A Custom Small Language Model Chatbot" target="_blank"
+            </button>
+            <a href="https://huggingface.co/spaces/2001Samir/ewu-chatbot-slm" class="option-btn" data-tooltip="A Custom Small Language Model Chatbot" target="_blank"
                 rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path
@@ -76,13 +76,13 @@
                 </svg>
                 <span>SLM Bot</span>
             </a>
-            <a href="https://huggingface.co/spaces/2001Samir/ewu-chatbot-slm" class="option-btn" data-tooltip="PHI-2 + RAG (Hybrid, Lightweight, Fast)" target="_blank"
-                rel="noopener noreferrer">
+            <button class="option-btn modal-trigger" data-option="Standard Bot" 
+                data-tooltip="PHI-2 + RAG (Hybrid, Lightweight, Fast)" tabindex="0">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M4 14h12v6H4zM4 8h12v6H4zM4 2h12v6H4z" />
                 </svg>
                 <span>Standard Bot</span>
-            </a>
+            </button>
 
             <button class="option-btn modal-trigger" data-option="Enhanced Combo"
                 data-tooltip="PHI2 + RASA + RAG (Hybrid, Robust)" tabindex="0">
@@ -122,6 +122,5 @@
     <script src="script.js"></script>
 
 </body>
-
 
 </html>
