--- a/index.html
+++ b/index.html
@@ -76,13 +76,17 @@
                 </svg>
                 <span>SLM Bot</span>
             </a>
-            <button class="option-btn modal-trigger" data-option="Standard Bot" 
-                data-tooltip="PHI-2 + RAG (Hybrid, Lightweight, Fast)" tabindex="0">
+            <a href="https://huggingface.co/spaces/2001Samir/phi2_with_rag_chatbot" class="option-btn" data-tooltip="A Custom Small Language Model Chatbot" target="_blank"
+                rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M4 14h12v6H4zM4 8h12v6H4zM4 2h12v6H4z" />
+                    <path
+                        d="M9.5 2A2.5 2.5 0 0 1 12 4.5v0A2.5 2.5 0 0 1 9.5 7v0A2.5 2.5 0 0 1 7 9.5v0A2.5 2.5 0 0 1 9.5 12v0A2.5 2.5 0 0 1 7 14.5v0A2.5 2.5 0 0 1 9.5 17v0A2.5 2.5 0 0 1 7 19.5v0A2.5 2.5 0 0 1 9.5 22" />
+                    <path
+                        d="M14.5 2a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5v0a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5v0a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5v0a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5" />
+                    <path d="M12 4.5V22" />
                 </svg>
                 <span>Standard Bot</span>
-            </button>
+            </a>
 
             <button class="option-btn modal-trigger" data-option="Enhanced Combo"
                 data-tooltip="PHI2 + RASA + RAG (Hybrid, Robust)" tabindex="0">
