--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="options-grid">
-            <a href="PASTE_URL_HERE_1" class="option-btn" data-tooltip="Rule-based Chatbot" target="_blank"
+            <a href="https://atkiya.github.io/rasa_interface/" class="option-btn" data-tooltip="Rule-based Chatbot" target="_blank"
                 rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="4" y="8" width="16" height="12" rx="2" />
@@ -128,3 +128,4 @@
 </body>
 
 </html>
+
