add a poor version of rag

--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
                 </svg>
                 <span>Rasa Bot</span>
             </a>
-            <button class="option-btn modal-trigger" data-option="RAG Bot"
-                data-tooltip="Retrieval-Augmented Chatbot" tabindex="0">
+            <a href="https://huggingface.co/spaces/ftftr/rag" class="option-btn" data-tooltip="Retrieval-Augmented Chatbot" target="_blank" rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path
-                        d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20v2H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2H20v15H6.5A2.5 2.5 0 0 1 4 4.5v15z" />
+                    <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20v2H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2H20v15H6.5A2.5 2.5 0 0 1 4 4.5v15z" />
                 </svg>
                 <span>RAG Bot</span>
-            </button>
+            </a>
+
             <a href="https://huggingface.co/spaces/2001Samir/ewu-chatbot-slm" class="option-btn" data-tooltip="A Custom Small Language Model Chatbot" target="_blank"
                 rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -128,4 +127,5 @@
 </body>
 
 </html>
+
 
