--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 <div class="dropdown">
                     <button class="dropdown-btn">Developers</button>
                     <div class="dropdown-content" id="dev-dropdown-content">
-                        </div>
+                    </div>
                 </div>
                 <div class="dropdown">
                     <button class="dropdown-btn">Supervisor</button>
                     <div class="dropdown-content" id="sup-dropdown-content">
-                        </div>
+                    </div>
                 </div>
                 <div class="dropdown">
                     <button class="dropdown-btn">Goal</button>
@@ -46,7 +46,8 @@
         </div>
 
         <div class="options-grid">
-            <a href="https://atkiya.github.io/rasa_interface/" class="option-btn" data-tooltip="Rule-based Chatbot" target="_blank"
+            <!-- Rasa Bot -->
+            <a href="PASTE_URL_HERE_1" class="option-btn" data-tooltip="Rule-based Chatbot" target="_blank"
                 rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="4" y="8" width="16" height="12" rx="2" />
@@ -57,14 +58,19 @@
                 </svg>
                 <span>Rasa Bot</span>
             </a>
-            <a href="https://huggingface.co/spaces/ftftr/rag" class="option-btn" data-tooltip="Retrieval-Augmented Chatbot" target="_blank" rel="noopener noreferrer">
+
+            <!-- RAG Bot -->
+            <a href="PASTE_URL_HERE_2" class="option-btn" data-tooltip="Retrieval-Augmented Chatbot" target="_blank"
+                rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20v2H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2H20v15H6.5A2.5 2.5 0 0 1 4 4.5v15z" />
+                    <path
+                        d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20v2H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2H20v15H6.5A2.5 2.5 0 0 1 4 4.5v15z" />
                 </svg>
                 <span>RAG Bot</span>
             </a>
 
-            <a href="https://huggingface.co/spaces/2001Samir/ewu-chatbot-slm" class="option-btn" data-tooltip="A Custom Small Language Model Chatbot" target="_blank"
+            <!-- SLM Bot -->
+            <a href="PASTE_URL_HERE_3" class="option-btn" data-tooltip="A Custom Small Language Model Chatbot" target="_blank"
                 rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path
@@ -75,29 +81,33 @@
                 </svg>
                 <span>SLM Bot</span>
             </a>
-            <a href="https://huggingface.co/spaces/2001Samir/phi2_with_rag_chatbot" class="option-btn" data-tooltip="A Custom Small Language Model Chatbot" target="_blank"
+
+            <!-- Standard Bot -->
+            <a href="PASTE_URL_HERE_4" class="option-btn" data-tooltip="PHI-2 + RAG (Hybrid, Lightweight, Fast)" target="_blank"
                 rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path
-                        d="M9.5 2A2.5 2.5 0 0 1 12 4.5v0A2.5 2.5 0 0 1 9.5 7v0A2.5 2.5 0 0 1 7 9.5v0A2.5 2.5 0 0 1 9.5 12v0A2.5 2.5 0 0 1 7 14.5v0A2.5 2.5 0 0 1 9.5 17v0A2.5 2.5 0 0 1 7 19.5v0A2.5 2.5 0 0 1 9.5 22" />
-                    <path
-                        d="M14.5 2a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5v0a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5v0a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5v0a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5" />
-                    <path d="M12 4.5V22" />
+                    <path d="M4 14h12v6H4zM4 8h12v6H4zM4 2h12v6H4z" />
                 </svg>
                 <span>Standard Bot</span>
             </a>
 
-            <button class="option-btn modal-trigger" data-option="Enhanced Combo"
-                data-tooltip="PHI2 + RASA + RAG (Hybrid, Robust)" tabindex="0">
+            <!-- Enhanced Bot - DIRECT LINK (NO MODAL) -->
+            <a href="https://atkiya.github.io/hybrid-rasa-rag-slm-_interface/" 
+               class="option-btn direct-link" 
+               data-tooltip="PHI2 + RASA + RAG (Hybrid, Robust)" 
+               target="_blank" 
+               rel="noopener noreferrer">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M4 14h12v6H4zM4 8h12v6H4zM4 2h12v6H4zM19 10h3m-1.5-1.5v3" />
                 </svg>
                 <span>Enhanced Bot</span>
-            </button>
+            </a>
+
+            <!-- Advanced Bot - MODAL TRIGGER -->
             <button class="option-btn modal-trigger" data-option="Advanced Combo"
-                data-tooltip="LLM + RASA + RAG (Rich, Resource-Heavy) " tabindex="0">
+                data-tooltip="LLM + RASA + RAG (Rich, Resource-Heavy)" tabindex="0">
                 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <circle cx="12" cy="12" r="1.5"></circle>
+                    ircle cx="12" cy="12" r="1.5"></circle>
                     <path d="M19.07 4.93a10 10 0 0 0-14.14 0"></path>
                     <path d="M4.93 19.07a10 10 0 0 0 14.14 0"></path>
                     <path d="M12 2v2.5"></path>
@@ -114,11 +124,12 @@
         </div>
     </div>
 
+    <!-- Modal Container -->
     <div id="modal-container" class="modal-container">
         <div class="modal-content">
             <span class="close-btn" id="close-btn">&times;</span>
             <div id="modal-body">
-                </div>
+            </div>
         </div>
     </div>
 
@@ -127,5 +138,3 @@
 </body>
 
 </html>
-
-
