--- a/index.html
+++ b/index.html
@@ -65,13 +65,16 @@ d="M14.5 2a2.5 2.5 0 0 1 2.5 2.5v0a2.5 2.5 0 0 1-2.5 2.5v0a2.5 2.5 0 0 1 2.5 2.5
 <span>Standard Bot</span>
 </a>
 
-<button class="option-btn modal-trigger" data-option="Enhanced Combo"
-data-tooltip="PHI2 + RASA + RAG (Hybrid, Robust)" tabindex="0">
-<svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-<path d="M4 14h12v6H4zM4 8h12v6H4zM4 2h12v6H4zM19 10h3m-1.5-1.5v3" />
-</svg>
-<span>Enhanced Bot</span>
-</button>
+<a href="https://atkiya.github.io/hybrid-rasa-rag-slm-_interface/" 
+               class="option-btn direct-link" 
+               data-tooltip="PHI2 + RASA + RAG (Hybrid, Robust)" 
+               target="_blank" 
+               rel="noopener noreferrer">
+                <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M4 14h12v6H4zM4 8h12v6H4zM4 2h12v6H4zM19 10h3m-1.5-1.5v3" />
+                </svg>
+                <span>Enhanced Bot</span>
+            </a>
 <button class="option-btn modal-trigger" data-option="Advanced Combo"
 data-tooltip="LLM + RASA + RAG (Rich, Resource-Heavy) " tabindex="0">
 <svg viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -105,3 +108,4 @@ data-tooltip="LLM + RASA + RAG (Rich, Resource-Heavy) " tabindex="0">
 </body>
 
 </html>
+
